Reorder hero statistics for clearer humanitarian impact storytelling

--- a/index.html
+++ b/index.html
@@ -43,57 +43,58 @@
 <!-- ================= HERO STATS ================= -->
 <section class="hero-stats">
   <div class="container">
-    <div class="stats-grid">
+     <div class="stats-grid">
 
-      <div class="stat-card">
-        <i class="fas fa-users"></i>
-        <div class="stat-number" data-key="total_beneficiaries">0</div>
-        <span data-ar="إجمالي المستفيدين" data-en="Total Beneficiaries"></span>
-      </div>
+  <div class="stat-card">
+    <i class="fas fa-users"></i>
+    <div class="stat-number" data-key="total_beneficiaries">0</div>
+    <span data-ar="إجمالي المستفيدين" data-en="Total Beneficiaries"></span>
+  </div>
 
-      <div class="stat-card">
-        <i class="fas fa-project-diagram"></i>
-        <div class="stat-number" data-key="projects">0</div>
-        <span data-ar="مشاريع استجابة" data-en="Response Projects"></span>
-      </div>
+  <div class="stat-card">
+    <i class="fas fa-project-diagram"></i>
+    <div class="stat-number" data-key="projects">0</div>
+    <span data-ar="مشاريع الاستجابة" data-en="Response Projects"></span>
+  </div>
 
-      <div class="stat-card">
-        <i class="fas fa-graduation-cap"></i>
-        <div class="stat-number" data-key="trainees">0</div>
-        <span data-ar="متدرب" data-en="Trainees"></span>
-      </div>
+  <div class="stat-card">
+    <i class="fas fa-ambulance"></i>
+    <div class="stat-number" data-key="ambulance_cases">0</div>
+    <span data-ar="إحالات إسعافية" data-en="Ambulance Referrals"></span>
+  </div>
 
-      <div class="stat-card">
-        <i class="fas fa-bomb"></i>
-        <div class="stat-number" data-key="mine_awareness">0</div>
-        <span data-ar="توعية ألغام" data-en="Mine Awareness"></span>
-      </div>
+  <div class="stat-card">
+    <i class="fas fa-bomb"></i>
+    <div class="stat-number" data-key="mine_awareness">0</div>
+    <span data-ar="توعية بمخاطر الألغام" data-en="Mine Risk Awareness"></span>
+  </div>
 
-      <div class="stat-card">
-        <i class="fas fa-ambulance"></i>
-        <div class="stat-number" data-key="ambulance_cases">0</div>
-        <span data-ar="إحالات إسعافية" data-en="Ambulance Referrals"></span>
-      </div>
+  <div class="stat-card">
+    <i class="fas fa-graduation-cap"></i>
+    <div class="stat-number" data-key="trainees">0</div>
+    <span data-ar="المتدربون" data-en="Trainees"></span>
+  </div>
 
-      <div class="stat-card">
-        <i class="fas fa-bullhorn"></i>
-        <div class="stat-number" data-key="movement_awareness">0</div>
-        <span data-ar="التعريف بالحركة" data-en="Movement Awareness"></span>
-      </div>
+  <div class="stat-card">
+    <i class="fas fa-bullhorn"></i>
+    <div class="stat-number" data-key="movement_awareness">0</div>
+    <span data-ar="التعريف بالحركة" data-en="Movement Awareness"></span>
+  </div>
 
-      <div class="stat-card">
-        <i class="fas fa-school"></i>
-        <div class="stat-number" data-key="classrooms">0</div>
-        <span data-ar="فصول دراسية" data-en="Classrooms"></span>
-      </div>
+  <div class="stat-card">
+    <i class="fas fa-school"></i>
+    <div class="stat-number" data-key="classrooms">0</div>
+    <span data-ar="فصول دراسية" data-en="Classrooms"></span>
+  </div>
 
-      <div class="stat-card">
-        <i class="fas fa-handshake"></i>
-        <div class="stat-number" data-key="donors">0</div>
-        <span data-ar="جهات مانحة" data-en="Donors"></span>
-      </div>
+  <div class="stat-card">
+    <i class="fas fa-handshake"></i>
+    <div class="stat-number" data-key="donors">0</div>
+    <span data-ar="الجهات المانحة" data-en="Donors"></span>
+  </div>
 
-    </div>
+</div>
+
   </div>
 </section>
 
