--- a/index.html
+++ b/index.html
@@ -107,12 +107,24 @@
       <i class="fas fa-chart-pie"></i>
     </h2>
 
-    <div class="charts-grid">
-      <canvas id="categoryChart"></canvas>
-      <canvas id="donorChart"></canvas>
-      <canvas id="activitiesChart"></canvas>
-      <canvas id="ambulanceChart"></canvas>
-    </div>
+     <div class="charts-grid">
+  <div class="chart-card">
+    <canvas id="categoryChart"></canvas>
+  </div>
+
+  <div class="chart-card">
+    <canvas id="donorChart"></canvas>
+  </div>
+
+  <div class="chart-card">
+    <canvas id="activitiesChart"></canvas>
+  </div>
+
+  <div class="chart-card">
+    <canvas id="ambulanceChart"></canvas>
+  </div>
+</div>
+
   </div>
 </section>
 
