show data for rfl,media ,and ..

--- a/index.html
+++ b/index.html
@@ -191,6 +191,9 @@
     </table>
   </div>
 </section>
+<tbody id="minesTableBody"></tbody>
+<tbody id="eventsTableBody"></tbody>
+<tbody id="mediaTableBody"></tbody>
 
 <!-- ================= GALLERY ================= -->
 <section class="gallery-section">
