--- a/index.html
+++ b/index.html
@@ -191,9 +191,87 @@
     </table>
   </div>
 </section>
-<tbody id="minesTableBody"></tbody>
-<tbody id="eventsTableBody"></tbody>
-<tbody id="mediaTableBody"></tbody>
+ <section class="table-section">
+  <div class="container">
+
+    <h2 class="section-title"
+        data-ar="التوعية بمخاطر الألغام والمقذوفات غير المنفجرة"
+        data-en="Mine and Explosive Remnants of War Awareness">
+    </h2>
+
+    <div class="table-wrapper">
+      <table class="projects-table">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th data-ar="الشهر" data-en="Month"></th>
+            <th data-ar="الموقع" data-en="Location"></th>
+            <th data-ar="ذكور" data-en="Male"></th>
+            <th data-ar="إناث" data-en="Female"></th>
+            <th data-ar="الإجمالي" data-en="Total"></th>
+          </tr>
+        </thead>
+        <tbody id="minesTableBody"></tbody>
+      </table>
+    </div>
+
+  </div>
+</section>
+<section class="table-section">
+  <div class="container">
+
+    <h2 class="section-title"
+        data-ar="الفعاليات والأنشطة"
+        data-en="Events and Activities">
+    </h2>
+
+    <div class="table-wrapper">
+      <table class="projects-table">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th data-ar="اسم الفعالية" data-en="Activity Name"></th>
+            <th data-ar="التصنيف" data-en="Category"></th>
+            <th data-ar="الموقع" data-en="Location"></th>
+            <th data-ar="التاريخ" data-en="Date"></th>
+            <th data-ar="الجهة الممولة" data-en="Donor"></th>
+            <th data-ar="عدد المتطوعين" data-en="Volunteers"></th>
+          </tr>
+        </thead>
+        <tbody id="eventsTableBody"></tbody>
+      </table>
+    </div>
+
+  </div>
+</section>
+<section class="table-section">
+  <div class="container">
+
+    <h2 class="section-title"
+        data-ar="الإعلام والتعريف بالحركة الدولية"
+        data-en="Media and Dissemination of the International Movement">
+    </h2>
+
+    <div class="table-wrapper">
+      <table class="projects-table">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th data-ar="الربع" data-en="Quarter"></th>
+            <th data-ar="النشاط" data-en="Activity"></th>
+            <th data-ar="عدد الأنشطة" data-en="No. of Activities"></th>
+            <th data-ar="الموقع" data-en="Location"></th>
+            <th data-ar="عدد المستفيدين" data-en="Beneficiaries"></th>
+          </tr>
+        </thead>
+        <tbody id="mediaTableBody"></tbody>
+      </table>
+    </div>
+
+  </div>
+</section>
+
+ 
 
 <!-- ================= GALLERY ================= -->
 <section class="gallery-section">
