--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
     <img src="Assets/logo.png" alt="YRCS Logo" class="logo">
     <div class="header-text">
       <h1 data-ar="جمعية الهلال الأحمر اليمني" data-en="Yemen Red Crescent Society"></h1>
-      <h2 data-ar="فرع مأرب" data-en="Marib Branch"></h2>
-      <p class="tagline"
+       <p class="tagline"
          data-ar="التقرير السنوي للمشاريع والأنشطة 2025"
          data-en="Annual Projects & Activities Report 2025"></p>
     </div>
@@ -287,8 +286,8 @@
 
 <!-- ================= FOOTER ================= -->
 <footer class="footer">
-  <p data-ar="© 2025 جمعية الهلال الأحمر اليمني – فرع مأرب"
-     data-en="© 2025 Yemen Red Crescent Society – Marib Branch"></p>
+  <p data-ar="© 2025 جمعية الهلال الأحمر اليمني   "
+     data-en="© 2025 Yemen Red Crescent Society "></p>
 </footer>
 
 <!-- ================= SCRIPT ================= -->
