--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </div>
 
   <div class="header-content">
-    <img src="Assets/logo.png" alt="YRCS Logo" class="logo">
+    <img src="Assets/YRCS-logo.png" alt="YRCS Logo" class="logo">
     <div class="header-text">
       <h1 data-ar="جمعية الهلال الأحمر اليمني" data-en="Yemen Red Crescent Society"></h1>
        <p class="tagline"
