--- a/index.html
+++ b/index.html
@@ -150,6 +150,21 @@
 
   </div>
 </section>
+<section class="charts-section">
+  <div class="container">
+
+    <h2 class="section-title"
+        data-ar="التوزيع القطاعي للأثر"
+        data-en="Sector Impact Distribution">
+      <i class="fas fa-chart-bar"></i>
+    </h2>
+
+    <div class="chart-card sector-impact-chart">
+      <canvas id="sectorImpactChart"></canvas>
+    </div>
+
+  </div>
+</section>
 
  </section>
 <!-- ================= CATEGORY CARDS ================= -->
