--- a/index.html
+++ b/index.html
@@ -118,6 +118,25 @@
 
   </div>
 </section>
+<!-- ================= SECTOR IMPACT ================= -->
+  <section class="tab-content active" id="tab-overview">
+
+<section class="hero-stats sector-impact">
+  <div class="container">
+
+    <h2 class="section-title"
+        data-ar="الأثر القطاعي"
+        data-en="Sector Impact">
+      <i class="fas fa-chart-line"></i>
+    </h2>
+
+    <div class="stats-grid" id="sectorImpactGrid">
+      <!-- Cards injected by JS -->
+    </div>
+
+  </div>
+</section>
+  </section>
  <section class="tab-content active" id="tab-overview">
 
 <section class="table-section">
